fixed formatting for non mobile. Still uses mobile width

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,3 +4,8 @@ body,
   display: flex;
   flex: 1;
 }
+
+body {
+  justify-content: center;
+  align-items: center;
+}
