--- a/client/src/Components/TempSlider/TempSlider.css
+++ b/client/src/Components/TempSlider/TempSlider.css
@@ -2,6 +2,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     margin-top:30px;
 }
