--- a/client/src/Home/Home.css
+++ b/client/src/Home/Home.css
@@ -4,6 +4,8 @@
     background-color: #2A2D35;
     flex: 1;
     min-height: 100vh;
+    max-width: 400px;
+    width: 100vw;
 }
 
 #loading-overlay {
